When scrolling to form controls on focus, make sure to flush out pending reflows first.  Bug 245133, r+sr=jst